--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="styles/indexStyle.css">
     <meta charset="UTF-8">
     <title>Clarice Lispector</title>
+    <link rel="icon" type="imagem/png" href="images/favicon.png" />
+
 </head>
 
 <body>
