--- a/poem/Minha alma tem o peso da luz.html
+++ b/poem/Minha alma tem o peso da luz.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>Minha Alma Tem o Peso da Luz</title>
-
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
