--- a/poem/Tentação.html
+++ b/poem/Tentação.html
@@ -5,11 +5,12 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>Tentação</title>
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
     <section id="section">
-        <span id="title">Tentação        </span>
+        <span id="title">Tentação</span>
         <hr id="lineTitle">
         <p id="poem">Ela estava com soluço. E como se não bastasse a claridade das duas horas, ela era ruiva. Na rua vazia as pedras vibravam de calor – a cabeça da menina flamejava. Sentada nos degraus de sua casa, ela suportava. Ninguém na rua, só uma pessoa esperando
             inutilmente no ponto do bonde. E como se não bastasse seu olhar submisso e paciente, o soluço a interrompia de momento a momento, abalando o queixo que se apoiava conformado na mão. Que fazer de uma menina ruiva com soluço? Olhamo-nos sem
