--- a/poem/A Perfeição.html
+++ b/poem/A Perfeição.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>A Perfeição</title>
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
