--- a/poem/Dá-me a tua mão.html
+++ b/poem/Dá-me a tua mão.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>Dá-me a Tua Mão</title>
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
