--- a/poem/Meu Deus, me dê a coragem.html
+++ b/poem/Meu Deus, me dê a coragem.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>Meu Deus Me Dê a Coragem</title>
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
