--- a/poem/Não te amo mais.html
+++ b/poem/Não te amo mais.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>Não Te Amo Mais</title>
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
