--- a/poem/Quero escrever o borrão vermelho de sangue.html
+++ b/poem/Quero escrever o borrão vermelho de sangue.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="../styles/poemStyle.css">
     <meta charset="UTF-8">
     <title>Quero Escrever o Borrão Vermelho de Sangue</title>
+    <link rel="icon" type="imagem/png" href="../images/favicon.png" />
 </head>
 
 <body>
