changing target from tag a

--- a/index.html
+++ b/index.html
@@ -24,52 +24,52 @@
 
 
         <div>
-            <a href="poem/Alma-Luz.html" target="_blank">
+            <a href="poem/Alma-Luz.html">
                 Alma luz</br>
             </a>
-            <a href="poem/A lucidez perigosa.html" target="_blank">
+            <a href="poem/A lucidez perigosa.html">
                 A lucidez perigosa</br>
             </a>
-            <a href="poem/A Perfeição.html" target="_blank">
+            <a href="poem/A Perfeição.html">
                 A perfeição</br>
             </a>
-            <a href="poem/Dá-me a tua mão.html" target="_blank">
+            <a href="poem/Dá-me a tua mão.html">
                 Dá-me a tua mão</br>
             </a>
-            <a href="poem/Quero escrever o borrão vermelho de sangue.html" target="_blank">
+            <a href="poem/Quero escrever o borrão vermelho de sangue.html">
                 Quero escrever o borrão vermelho de sangue</br>
             </a>
-            <a href="poem/Solidão.html" target="_blank">
+            <a href="poem/Solidão.html">
                 Solidão</br>
             </a>
-            <a href="poem/Eu.html" target="_blank">
+            <a href="poem/Eu.html">
                 Eu</br>
             </a>
-            <a href="poem/Mão.html" target="_blank">
+            <a href="poem/Mão.html">
                 Mão</br>
             </a>
-            <a href="poem/Mas há a vida.html" target="_blank">
+            <a href="poem/Mas há a vida.html">
                 Mas há a vida</br>
             </a>
-            <a href="poem/Meu Deus, me dê a coragem.html" target="_blank">
+            <a href="poem/Meu Deus, me dê a coragem.html">
                 Meu Deus, me dê a coragem</br>
             </a>
-            <a href="poem/Minha alma tem o peso da luz.html" target="_blank">
+            <a href="poem/Minha alma tem o peso da luz.html">
                 Minha alma tem o peso da luz</br>
             </a>
-            <a href="poem/Não te amo mais.html" target="_blank">
+            <a href="poem/Não te amo mais.html">
                 Não te amo mais</br>
             </a>
-            <a href="poem/Nossa truculência.html" target="_blank">
+            <a href="poem/Nossa truculência.html">
                 Nossa truculência</br>
             </a>
-            <a href="poem/Sonhe.html" target="_blank">
+            <a href="poem/Sonhe.html">
                 Sonhe</br>
             </a>
-            <a href="poem/Sou.html" target="_blank">
+            <a href="poem/Sou.html">
                 Sou</br>
             </a>
-            <a href="poem/Tentação.html" target="_blank">
+            <a href="poem/Tentação.html">
                 Tentação
             </a>
         </div>
@@ -79,10 +79,10 @@
         <p id="contact">Contate-me:</p>
         <hr id="lineFooter">
         <div>
-            <a href="mailto:patrick.oliveira27@hotmail.com" class="contactImageReset"><img src="images/email.png" alt="Enviar um e-mail" class="contactIcon"></a>
-            <a href="https://www.linkedin.com/in/po27/" class="contactImageReset"><img src="images/linkedin.png" alt="Acessar o linkedin" class="contactIcon"></a>
-            <a href="https://api.whatsapp.com/send?phone=5521966086050&text=Olá" class="contactImageReset"><img src="images/whatsapp.png" alt="Acessar o whatsapp" class="contactIcon"></a>
-            <a href="https://twitter.com/TriickU" class="contactImageReset"><img src="images/twitter.png" alt="Acessar o twiiter" class="contactIcon"></a>
+            <a href="mailto:patrick.oliveira27@hotmail.com" target="_blank" class="contactImageReset"><img src="images/email.png" alt="Enviar um e-mail" class="contactIcon" target="_blank"></a>
+            <a href="https://www.linkedin.com/in/po27/" target="_blank" class="contactImageReset"><img src="images/linkedin.png" alt="Acessar o linkedin" class="contactIcon" target="_blank"></a>
+            <a href="https://api.whatsapp.com/send?phone=5521966086050&text=Olá" target="_blank" class="contactImageReset"><img src="images/whatsapp.png" alt="Acessar o whatsapp" class="contactIcon" target="_blank"></a>
+            <a href="https://twitter.com/TriickU" target="_blank" class="contactImageReset"><img src="images/twitter.png" alt="Acessar o twiiter" class="contactIcon" target="_blank"></a>
         </div>
 
         <span id="copyright">Copyright © 2022. Todos os direitos reservados a autora Clarice Lispector.</span>
